--- a/packages/frontend/app/routes/trade/orderbook/ExpandableOrderBook.module.css
+++ b/packages/frontend/app/routes/trade/orderbook/ExpandableOrderBook.module.css
@@ -11,7 +11,7 @@
     left: 0;
     top: 0;
     transform: none;
-    z-index: 2;
+    z-index: 0;
     width: 30px;
     height: 100%;
     padding: 0;
